--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Finn Wright",
   "license": "MIT",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
