--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "author": "Finn Wright",
   "license": "MIT",
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
