--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
     "dotenv": "^16.3.2"
   },
   "devDependencies": {
